<resources>
    <!-- Strings related to topfragment -->
    <string name="title_top">Top Fragment</string>
    <!-- Strings related to topfragment -->
    <string name="click_to_continue">Click to continue</string>
    <string name="click_to_exit">Click to exit</string>
    <string name="enter_your_name">enter your name</string>
    <string name="enter_button">Enter</string>
    <string name="the_calling_activity_was">the calling activity was</string>
    <string name="geting_name">go get the name</string>
    <string name="getbear_name">getbear</string>
    <string name="brands">brands</string>
    <string name="loginActivity">Login Tab</string>
    <string name="exit_to_login">Exit</string>
    <string name="tittle_text">welcome to sending and receiving world</string>
    <string name="send_message">send</string>
    <string name="main_chating_page">Chat Service</string>
    <string name="purpose_holiday">Purpose of Holiday</string>
    <string-array name="purpose">
        <item>Select Purpose Of Holiday</item>
        <item>Honeymoon</item>
        <item>Picnic</item>
        <item>Summer Vacation</item>
        <item>Winter Vacation</item>
        <item>Pilgrimage</item>
        <item>Other</item>
    </string-array>

    <string-array name="pizzas">
        <item>light</item>
        <item>brown</item>
    </string-array>

    <string-array name="pasta">
        <item>light</item>
        <item>brown</item>
    </string-array>

    <string-array name="stores">
        <item>banglore</item>
        <item>patna</item>
    </string-array>

    <string-array name="titles">
        <item>Home</item>
        <item>Pizzas</item>
        <item>Pasta</item>
        <item>Stores</item>
    </string-array>


    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">close drawer</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome_message">Welcome to Trip Hunt</string>
    <string name="triphunt">TripHunt</string>
    <string name="login_with_google">login with google+</string>
    <string name="login_with_facebook">login with facebook</string>
    <string name="facebook_app_id">255547844904614</string>
    <string name="title_activity_home_sceen">HomeSceen</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_drawable">Drawable</string>


    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="app_name">TRIPHUNT</string>


    <string name="mobicomkit_label">Applozic</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="no_of_person">No Of Person</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- strings of weather-->
    <string name="temperature">Temperature</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="powered_by_yahoo">powered by Yahoo!</string>
    <string name="condition_icon">Condition Icon</string>
    <string name="loading">Loading&#8230;</string>
    <string name="temperature_output">%1$d&#176;%2$s</string>
    <string name="update_location">Update Location</string>
    <string name="settings">Settings</string>
    <string name="cache_exception">No Cached Weather Data</string>
    <string name="location_permission_needed">Device location is needed for Weather GeoLocation</string>
    <string name="disable_geolocation">Change Settings</string>
    <string name="day">Day</string>
    <string name="high">High</string>
    <string name="low">Low</string>

    <!-- toolbar tittles when menu get selected -->
    <string-array name="nav_item_activity_titles">
        <item>New Tour</item>
        <item>My Tour</item>
        <item>Old Tour</item>
        <item>Cancel Tour</item>
        <item>Weather Data</item>
    </string-array>
</resources>
