<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/backgr_2"
    android:gravity="center_horizontal"
    android:clickable="true"
    android:textAlignment="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColorHighlight="@android:color/background_dark"
        android:textColor="@android:color/darker_gray"
        android:textIsSelectable="false"
        android:textSize="@android:dimen/app_icon_size"
        android:id="@+id/textView"
        android:gravity="center_horizontal"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/click_to_exit"
        android:id="@+id/close_btn"
        android:textSize="15sp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="click_exit"
        android:layout_alignTop="@+id/login_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/click_to_continue"
        android:id="@+id/login_btn"
        android:textSize="15sp"
        android:background="@android:color/holo_blue_bright"
        android:layout_marginBottom="45dp"
        android:onClick="click_continue"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />




</RelativeLayout>
